# apps/server/src/main/java/com/nextone/task/TaskService.java
@@ -48,6 +48,9 @@ public class TaskService {
                 null,
                 null,
                 command.estimateMinutes(),
+                0,
+                0,
+                null,
                 command.energyLevel(),
                 now + ":" + id,
                 null,
@@ -326,6 +329,9 @@ public class TaskService {
                 waitingFor,
                 waitingSince,
                 estimateMinutes,
+                source.focusSessionCount(),
+                source.focusMinutes(),
+                source.lastFocusedAt(),
                 energyLevel,
                 source.sortKey(),
                 completedAt,
